--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "chart.js": "^4.5.0",
+    "dom-to-image-more": "^3.7.1",
+    "html-to-image": "^1.11.13",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
