--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "chart.js": "^4.5.0",
     "dom-to-image-more": "^3.7.1",
     "html-to-image": "^1.11.13",
+  "prop-types": "^15.8.1",
     "react": "^19.1.0",
+  "typescript": "^5.5.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.8.2",
